Fri Oct 24 00:49:05 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt.spec.in: doing some testing and raising
	  the build requirement to 2.5.10 
	* libexslt/Makefile.am configure.in: applied patch from Graham Wilson
	  for linking the exslt lib with the lib being build instead of the
	  installed one

Thu Oct 23 15:48:39 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: Fixed problem with cascaded predicates
	  (more of bug 119946)

Thu Oct 23 15:37:26 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* restored earliest portion of ChangeLog (was corrupted)

Wed Oct 22 13:07:50 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.[ch]: applied patch from Kasimier Buchcik
	  for xsltGetDebuggerStatus and xsltSetDebuggerStatus
	* doc/libxslt-api.xml: regenerated the API

Sun Oct 19 23:32:23 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: bump the libxml2 require to 2.6.0 which
	  should ship for good real soon...
	* doc/Makefile.am: fix installation of HTML pages
	* doc/libxslt-api.xml: rebuilt
	* libxslt/xsltexports.h: cleanup
	* python/generator.py: ATTRIBUTE_UNUSED is after the parameter
	* xsltproc/xsltproc.c: applied Crutcher Dunnavant --load-trace patch 2

Fri Oct 17 18:25:42 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/attributes.c: fixed bug 123822

Fri Oct 17 12:40:37 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: fixed bug 119946
	* configure.in: enhanced for better devel (me) testing

Wed Oct 15 17:30:43 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: applied a small patch from Troels Walsted Hansen
	  for python libxml2 detection.

Sat Sep 27 18:42:57 PDT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c, libxslt/extensions.c, libexslt/date.c,
	  python/libxslt.c, xsltproc/xsltproc.c: minor cleanup for
	  various compilation warnings (AIX as well as gcc)

Sat Sep 27 17:29:43 CEST 2003 Daniel Veillard <daniel@veillard.com>
