@@ -1,3 +1,8 @@
+Mon Oct 27 08:57:43 HKT 2003 William Brack <wbrack@mmm.com.hk>
+
+	* libxslt/xslt.c: put in #undef for IS_BLANK macros to fix
+	  problem reported on the mailing list by Justin Fletcher
+
 Fri Oct 24 00:49:05 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* configure.in libxslt.spec.in: doing some testing and raising
